# oshsosh-kiwanis-web-crawler

./: .gitignore  Cargo.toml  contest-goals.json  kill_scripts.sh  openapi2-run.yaml  start_get_contest_goals.sh  start_scripts.sh  top-dogs.json
src/: lib.rs
