[package]
name = "oshkosh-kiwanis-web-crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
nipper = { version = "0.1.9" }
reqwest = { version = "0.11.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"


[[bin]]
name = "get_dogs"
path = "bin/get_dogs.rs"

[[bin]]
name = "get_contest_goals"
path = "bin/get_contest_goals.rs"

[[bin]]
name = "api"
path = "bin/api.rs"